--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<iframe src="https://plotdb.io/v/chart/19356" width="50%" height="600px" allowfullscreen="true" frameborder="0"></iframe> 
 		<!--麻煩前端修改 width & height，或移到 css-->
 		<div id="scatter-block">
-			<div id="scp1" class="scatter">1</div>
-			<div id="scp2" class="scatter">2</div>
+			<div id="scp0" class="scatter"></div>
+			<!--<div id="scp2" class="scatter">2</div>
 			<div id="scp3" class="scatter">3</div>
-			<div id="scp4" class="scatter">4</div>
+			<div id="scp4" class="scatter">4</div>-->
 		</div>
 		<script type="text/javascript" src="scatter.js"></script>
 </body>
